--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>自己紹介カード</title>
-  <link rel="stylesheet" href="デザイン.css">
+  <link rel="stylesheet" href="design.css">
 </head>
 <body>
   <div class="bg">
